完成位移相关API的单测；添加无限流相关的API调用检查